--- a/index.html
+++ b/index.html
@@ -139,10 +139,8 @@
         <div class="app_main_body">
           <div class="app_buttons_div">
             <form class="app_button_form">
-              <button class="app_button" >Start</button>
-            </form>
-            <form class="app_button_form">
-              <button class="app_button" >Statistics</button>
+                <input class="app_input" type="text">
+              <button class="app_button" >Check the  ping of the server</button>
             </form>
           </div>
           
